erDiagram
    USER {
        string id PK
        string name
        string email
        int age
        string phoneNumber
        string status
        string role
        string profilePictureUrl
        timestamp createdAt
        timestamp updatedAt
    }
    
    LOGIN_HISTORY {
        string id PK
        string userId FK "references USER.id"
        timestamp loginTime
        string deviceInfo
        string ipAddress
    }
    
    STUDENT {
        string id PK
        string studentId "business key unique"
        string name
        timestamp dateOfBirth
        string gender
        string address
        string phoneNumber
        string email
        string major
        int yearOfStudy
        double gpa
        string status
        timestamp createdAt
        timestamp updatedAt
    }
    
    CERTIFICATE {
        string id PK
        string studentId FK "references STUDENT.studentId"
        string name
        string issuingOrganization
        timestamp issueDate
        timestamp expiryDate
        string certificateUrl
        string description
        timestamp createdAt
        timestamp updatedAt
    }
    
    USER ||--o{ LOGIN_HISTORY : "has (userId -> USER.id)"
    STUDENT ||--o{ CERTIFICATE : "has (studentId -> STUDENT.studentId)"
